--- a/src/Globals.scss
+++ b/src/Globals.scss
@@ -1,4 +1,7 @@
 :root{
+    // ----- Global Variables ----- //
+    --header-height: 52px;
+    // ----- Global Styles ----- //
     #root{
         position: fixed;
         width: 100vw!important;
@@ -17,6 +20,11 @@
     img{
         object-fit: contain;
     }
+    a{
+        color: inherit;
+        text-decoration: none;
+    }
 }
 
+// ----- Global Imports ----- //
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
