--- a/src/views/FavoritesView.module.scss
+++ b/src/views/FavoritesView.module.scss
@@ -3,14 +3,5 @@
     height: 100%;
     width: 100%;
     justify-content: center;
-    align-items: center;
-    .tasks_manager_container{
-        display: flex;
-        flex-direction: column;
-        width: 80%;
-        height: 700px;
-        align-items: center;
-        padding: 50px;
-        background-color: #D5D5D5;
-    }
+    align-items: center
 }
