--- a/src/views/HomeView.module.scss
+++ b/src/views/HomeView.module.scss
@@ -4,9 +4,6 @@
     height: 100%;
     width: 100%;
     padding: 30px 0;
+    padding-bottom: 30px;
     align-items: center;
-    .search_container{
-        width: 500px;
-        margin-bottom: 50px;
-    }
 }
