--- a/src/components/Home/WeatherCard.module.scss
+++ b/src/components/Home/WeatherCard.module.scss
@@ -1,5 +1,19 @@
-.weather_container{
-  width: 80%;
-  height: 800px;
+.loader_container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content_container{
+  flex: 1;
+  width: 100%;
   background-color: red;
+}
+
+.forecasts_container{
+  background-color: yellow;
+  height: 50%;
+  width: 100%;
 }
