--- a/src/components/Home/WeatherCard.module.scss
+++ b/src/components/Home/WeatherCard.module.scss
@@ -23,6 +23,23 @@
   .details_container{
     flex: 1;
     background-color: red;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    h2{
+      padding: 0;
+      margin: 0;
+    }
+    p{
+      margin:0;
+      padding: 0;
+    }
+    span{
+      margin-top: 20px;
+      padding: 0;
+      font-size: 25px;
+      font-weight: bold;
+    }
   }
   .map_container{
     flex: 1;
