--- a/src/components/Home/WeatherCard.module.scss
+++ b/src/components/Home/WeatherCard.module.scss
@@ -22,7 +22,6 @@
   display: flex;
   .details_container{
     flex: 1;
-    background-color: red;
     display: flex;
     flex-direction: column;
     padding: 15px;
@@ -34,11 +33,19 @@
       margin:0;
       padding: 0;
     }
-    span{
+    .temprature_container{
       margin-top: 20px;
-      padding: 0;
-      font-size: 25px;
-      font-weight: bold;
+      display: flex;
+      align-items: center;
+      img{
+        width: 100px;
+      }
+      span{
+        margin-right: 30px;
+        padding: 0;
+        font-size: 45px;
+        font-weight: bold;
+      }
     }
   }
   .map_container{
