--- a/src/components/Home/WeatherCard.module.scss
+++ b/src/components/Home/WeatherCard.module.scss
@@ -24,7 +24,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding: 15px;
     h2{
       padding: 0;
       margin: 0;
@@ -50,7 +49,7 @@
   }
   .map_container{
     flex: 1;
-    background-color: green;
+    position: relative;
   }
 }
 
