--- a/src/components/common/Forecast.module.scss
+++ b/src/components/common/Forecast.module.scss
@@ -1,4 +1,30 @@
-.forecast_container{
-    height: 250px;
-    width: 180px;
+.container{
+    h2{
+        font-size: 13px;
+    }
+    .temprature{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        font-weight: bold;
+        font-size: 15px;
+        margin-top: auto;
+    }
+    .details_container{
+        margin-top: 30px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        img{
+            margin-bottom: 10px;
+            width: 125px;
+        }
+        p{
+            font-size: 14px;
+            text-align: center;
+            margin:0;
+        }
+    }
 }
